devops: añadiendo archivos de CI

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ steps:
     branch:
     - develop
     - feature/*
-    - release
+    - release/*
     event:
     - push
 
@@ -22,7 +22,7 @@ steps:
     branch:
     - develop
     - feature/*
-    - release
+    - release/*
     event:
     - push
 
@@ -34,24 +34,24 @@ steps:
     branch:
     - develop
     - feature/*
-    - release
-    event:
-    - push
-
-- name: run_sonar_scanner
-  image: aosapps/drone-sonar-plugin
-  settings:
-    sonar_host:
-      from_secret: SONAR_HOST
-    sonar_token:
-      from_secret: SONAR_TOKEN
-  when:
-    branch:
-    - develop
-    - feature/*
     - release/*
     event:
     - push
+
+#- name: run_sonar_scanner
+#  image: aosapps/drone-sonar-plugin
+#  settings:
+#    sonar_host:
+#      from_secret: SONAR_HOST
+#    sonar_token:
+#      from_secret: SONAR_TOKEN
+#  when:
+#    branch:
+#    - develop
+#    - feature/*
+#    - release/*
+#    event:
+#    - push
 
 - name: build_release
   image: node:13.14.0-alpine
@@ -93,7 +93,7 @@ steps:
     strip_prefix: dist/
   when:
     branch:
-    - release
+    - release/*
     event:
     - push
 
@@ -138,7 +138,7 @@ steps:
   when:
     branch:
     - develop
-    - release
+    - release/*
     - master
     event:
     - push
