--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 VUE_APP_AUTORIZATION_URL=https://autenticacion.portaloas.udistrital.edu.co/oauth2/authorize
 VUE_APP_CLIENTE_ID=C9f5WUJjiq4Cd3_1KvGg0u8M06ca
-VUE_APP_REDIRECT_URL={baseUrl}/login
+VUE_APP_REDIRECT_URL=https://pruebassiciud.portaloas.udistrital.edu.co/login
 VUE_APP_RESPONSE_TYPE=id_token token
 VUE_APP_SCOPE=openid email
 VUE_APP_SIGN_OUT_APPEND_TOKEN=true
-VUE_APP_SIGN_OUT_REDIRECT_URL={baseUrl}/logout
+VUE_APP_SIGN_OUT_REDIRECT_URL=https://pruebassiciud.portaloas.udistrital.edu.co/logout
 VUE_APP_SIGN_OUT_URL=https://autenticacion.portaloas.udistrital.edu.co/oidc/logout
 VUE_APP_TITLE=Shared Title
 VUE_APP_URL_USER_INFO=https://autenticacion.portaloas.udistrital.edu.co/oauth2/userinfo
