ajustes de configuración
ajustes de configuración

--- a/public/data/config.json
+++ b/public/data/config.json
@@ -1,5 +1,5 @@
 {
-	"impersonate": true,
+	"impersonate": false,
 	"env": {
 		"development": {
 			"name": "dev",
@@ -16,7 +16,7 @@
 		"rest": {
 			"token_name": "token_local",
 			"url1": "https://digital.nemedi.com/siciud-v2-back/api/v1",
-			"url": "https://siciud-v2-api.nemedi.com/api/v1",
+			"url": "https://autenticacion.portaloas.udistrital.edu.co/apioas/siciud_crud/v1",
 			"url2": "http://200.69.103.88:3114/api/v1"
 		},
 		"oas": {
@@ -30,13 +30,13 @@
 		"oidc": {
 			"AUTORIZATION_URL": "https://autenticacion.portaloas.udistrital.edu.co/oauth2/authorize",
 			"URL_USER_INFO": "https://autenticacion.portaloas.udistrital.edu.co/oauth2/userinfo",
-			"CLIENTE_ID": "k1wCyBLq8NYU1KOXF0ufhBmSKOEa",
+			"CLIENTE_ID": "C9f5WUJjiq4Cd3_1KvGg0u8M06ca",
 			"RESPONSE_TYPE": "id_token token",
 			"SCOPE": "openid email",
 			"SIGN_OUT_URL": "https://autenticacion.portaloas.udistrital.edu.co/oidc/logout",
 			"SIGN_OUT_APPEND_TOKEN": "true",
-			"SIGN_OUT_REDIRECT_URL": "{baseUrl}/logout",
-			"REDIRECT_URL": "{baseUrl}/login"
+			"SIGN_OUT_REDIRECT_URL": "https://pruebassiciud.portaloas.udistrital.edu.co/logout",
+			"REDIRECT_URL": "https://pruebassiciud.portaloas.udistrital.edu.co/login"
 		},
 		"oidc_bk": {
 			"SIGN_OUT_REDIRECT_URL": "http://200.69.103.88:3115/",
