--- a/public/data/config.json
+++ b/public/data/config.json
@@ -1,17 +1,7 @@
 {
-	"debug": false,
+	"debug": true,
 	"pageSize": 20,
 	"pageSizes": [10, 20, 50],
-	"clasifier": [
-		{ "name": "articulo_categoria", "id": 12 },
-		{ "name": "articulo_tipo_documento", "id": 23 },
-		{ "name": "articulo_tipo", "id": 5 },
-		{ "name": "unidad_estado", "id": 1 },
-		{ "name": "unidad_linea_investigacion", "id": 53 },
-		{ "name": "unidad_rol_participante", "id": 32 },
-		{ "name": "unidad_tipo_documento", "id": 22 },
-		{ "name": "unidad_tipo", "id": 2 }
-	],
 	"env": {
 		"development": {
 			"name": "dev",
@@ -35,7 +25,7 @@
 		"oas": {
 			"VUE_APP_AUTH_URL": "",
 			"token_name": "token_oas",
-			"token_value": "a138f4e0-33da-3685-a82c-2db9386b9080",
+			"token_value": "b9355116-dfd6-31af-a924-d67620e6c4d1",
 			"url": "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
 		}
 	},
@@ -43,6 +33,7 @@
 		"oidc": {
 			"AUTORIZATION_URL": "https://autenticacion.portaloas.udistrital.edu.co/oauth2/authorize",
 			"URL_USER_INFO": "https://autenticacion.portaloas.udistrital.edu.co/oauth2/userinfo",
+			"AUTENTICACION_MID": "https://autenticacion.portaloas.udistrital.edu.co/apioas/autenticacion_mid/v1/token/",
 			"CLIENTE_ID": "k1wCyBLq8NYU1KOXF0ufhBmSKOEa",
 			"RESPONSE_TYPE": "id_token token",
 			"SCOPE": "openid email",
