feat: Ingreso Google Auth

--- a/public/data/config.json
+++ b/public/data/config.json
@@ -1,5 +1,5 @@
 {
-	"debug": false,
+	"debug": true,
 	"pageSize": 20,
 	"pageSizes": [10, 20, 50],
 	"env": {
@@ -25,7 +25,7 @@
 		"oas": {
 			"VUE_APP_AUTH_URL": "",
 			"token_name": "token_oas",
-			"token_value": "2ff50c34-9074-33ed-8686-39e1b863480d",
+			"token_value": "d2fa949f-6e36-3fa8-94ce-3e69b6329c25",
 			"url": "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
 		}
 	},
