--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"file-saver": "^2.0.5",
 		"idle-vue": "^2.0.5",
 		"node-sass": "^4.14.1",
+		"nuxeo": "^3.17.0",
 		"retinajs": "^2.1.3",
 		"sass-loader": "^10.0.4",
 		"vue": "^2.6.12",
