feat: Tipos, subtipos y borrado en DxSelectBox

--- a/public/data/config.json
+++ b/public/data/config.json
@@ -1,5 +1,5 @@
 {
-	"debug": true,
+	"debug": false,
 	"pageSize": 20,
 	"pageSizes": [10, 20, 50],
 	"env": {
@@ -25,7 +25,7 @@
 		"oas": {
 			"VUE_APP_AUTH_URL": "",
 			"token_name": "oas_token",
-			"token_value": "f4d0dc40-be32-379b-89d3-26843554ea1b",
+			"token_value": "eff2d13e-7bc2-36a1-8d5e-fe848713f4f4",
 			"url": "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
 		}
 	},
