--- a/public/data/config.json
+++ b/public/data/config.json
@@ -29,7 +29,7 @@
                 "oas":  {
                             "VUE_APP_AUTH_URL":  "",
                             "token_name":  "oas_token",
-                            "token_value":  "9da0375f-ef03-3298-b70f-18ac3a0ff22d",
+                            "token_value":  null,
                             "url":  "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
                         }
             },
