--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.8",
 		"@vue/cli-plugin-eslint": "~4.5.8",
-		"@vue/cli-service": "~4.5.8",
+		"@vue/cli-service": "^4.5.13",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^7.12.1",
 		"eslint-plugin-vue": "^7.1.0",
