--- a/public/web.config
+++ b/public/web.config
@@ -8,8 +8,8 @@
 			<customHeaders>
 				<remove name="X-Frame-Options" />
 				<remove name="Strict-Transport-Security" />
-				<add name="X-Frame-Options" value="DENY" />
-				<add name="Strict-Transport-Security" value="max-age=31536000"/>
+				<add name="X-Frame-Options" value="SAMEORIGIN" />
+				<add name="Strict-Transport-Security" value="max-age=31536000" />
 			</customHeaders>
 		</httpProtocol>
 		<rewrite>
