--- a/.drone.yml
+++ b/.drone.yml
@@ -72,7 +72,7 @@ steps:
   commands:
   - node --version
   - npm i
-  - NODE_ENV=production npm run build
+  - npm run build:prod
   when:
     branch:
     - master
@@ -89,7 +89,7 @@ steps:
       from_secret: aws_secret_access_key
     region: us-east-1
     source: dist/**/*
-    target: /${DRONE_REPO_NAME}
+    target: /pruebas${DRONE_REPO_NAME%%_cliente}.portaloas.udistrital.edu.co
     strip_prefix: dist/
   when:
     branch:
@@ -107,7 +107,7 @@ steps:
       from_secret: aws_secret_access_key
     region: us-east-1
     source: dist/**/*
-    target: /${DRONE_REPO_NAME}
+    target: /${DRONE_REPO_NAME%%_cliente}.portaloas.udistrital.edu.co
     strip_prefix: dist/
   when:
     branch:
