--- a/.drone.yml
+++ b/.drone.yml
@@ -54,7 +54,7 @@ steps:
       \-Dsonar.language=js
       \-Dsonar.sourceEncoding=UTF-8
       \-Dsonar.exclusions=**/node_modules/**,**/*.spec.ts,**/*.scss
-      \-Dsonar.tests=src/app
+      \-Dsonar.tests=src
       \-Dsonar.test.inclusions=**/*.spec.ts
       \-Dsonar.host.url=https://sonarqube.portaloas.udistrital.edu.co/
     when:
