--- a/public/data/config.json
+++ b/public/data/config.json
@@ -5,12 +5,13 @@
 	"api": {
 		"rest": {
 			"token_name": "siciud_token",
+			"url_dev_0": "http://lyra:3506/api/v1",
 			"url_dev": "https://siciud-v2-api.nemedi.com/api/v1",
 			"url_prod": "https://autenticacion.portaloas.udistrital.edu.co/apioas/siciud_crud/v1"
 		},
 		"oas": {
 			"token_name": "oas_token",
-			"token_value": "666ce742-d7e3-3758-aa04-dde1c7f811ca",
+			"token_value": "2353fb37-e43a-3577-8918-7b69dd34bfbb",
 			"url": "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
 		}
 	},
