feat: ajusted a redes y entidades con nuevo formato v1

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ config/database.yml
 clsconfig.json
 public/data/config.json
 /public/data/config.json
+#/src/components/global/footer.vue
 
 # local env files
 .env.local
