--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
 		"core-js": "^3.6.5",
 		"devextreme": "20.2.3",
 		"devextreme-vue": "20.2.3",
-		"exceljs": "^4.2.1",
-		"file-saver": "^2.0.5",
+		"docx-templates": "^4.8.2",
 		"idle-vue": "^2.0.5",
+		"jspdf": "^2.3.1",
 		"node-sass": "^4.14.1",
 		"nuxeo": "^3.17.0",
 		"retinajs": "^2.1.3",
 		"sass-loader": "^10.0.4",
 		"vue": "^2.6.12",
+		"vue-html2pdf": "^1.8.0",
 		"vue-retina": "^0.1.11",
 		"vue-router": "^3.4.8",
 		"vuex": "^3.5.1",
