fix: reescritura plan de accion formulario y listado de redes academicas version 0

--- a/public/data/config.json
+++ b/public/data/config.json
@@ -15,7 +15,7 @@
                          },
                 "oas":  {
                             "token_name":  "oas_token",
-                            "token_value": null,
+                            "token_value": "476764e6-e7a4-388d-8471-847fda9b0ada",
                             "url":  "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
                         }
             },
