--- a/public/data/config.json
+++ b/public/data/config.json
@@ -1,5 +1,5 @@
 {
-    "debug":  false,
+    "debug":  true,
     "pageSize":  20,
     "pageSizes":  [
                       10,
@@ -15,7 +15,7 @@
                          },
                 "oas":  {
                             "token_name":  "oas_token",
-                            "token_value": "67d644c6-5607-3267-a76b-6705d2279222",
+                            "token_value": "b6ce06b8-ebb0-3ef8-9723-7c047eb8e40c",
                             "url":  "https://autenticacion.portaloas.udistrital.edu.co/apioas/"
                         }
             },
